--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-900 text-white min-h-screen p-6">
   <div class="flex items-center space-x-4 mb-6">
-  <img src="./logo.png" alt="Logo" class="w-10 h-10" />
+  <img id="logo" alt="Logo" class="w-10 h-10" />
   <h1 class="text-3xl font-bold">My Tiles</h1>
 </div>
 
@@ -75,6 +75,19 @@
       </div>
     </div>
   </div>
+
+  <!-- Delete Confirmation Modal -->
+<div id="confirmDeleteModal" class="hidden fixed inset-0 bg-black bg-opacity-50 backdrop-blur-sm flex justify-center items-center z-50">
+  <div class="bg-gray-800 p-6 rounded-xl w-96 text-center">
+    <h2 class="text-xl font-bold mb-4">Delete Custom Tile</h2>
+    <p id="deleteConfirmMessage" class="text-gray-300 mb-6">Are you sure you want to delete this tile?</p>
+    <div class="flex justify-center space-x-4">
+      <button id="cancelDeleteBtn" class="px-4 py-2 bg-gray-700 hover:bg-gray-600 rounded">Cancel</button>
+      <button id="confirmDeleteBtn" class="px-4 py-2 bg-red-600 hover:bg-red-700 text-white rounded">Delete</button>
+    </div>
+  </div>
+</div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
   <script src="dash.js"></script>
