--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="dash.css" />
 </head>
 <body class="bg-gray-900 text-white min-h-screen p-6">
   <div class="flex items-center space-x-4 mb-6">
