--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-900 text-white min-h-screen p-6">
   <div class="flex items-center space-x-4 mb-6">
-  <img src="./logo.png" id="logo" alt="Logo" class="w-10 h-10" />
+  <img src="./logo.png" id="logo" alt="Logo" class="cursor-pointer w-10 h-10" />
   <h1 class="text-3xl font-bold">My Tiles</h1>
 </div>
 
